Add model adapted to use boundary predictor w/pooling of Nawrot et al. (2023)

--- a/eval/span_corruption_eval.ipynb
+++ b/eval/span_corruption_eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,6 +702,300 @@
     "\n",
     "# Now let's plot the two datasets with different colors for languages\n",
     "plot_stacked_losses_with_labels_and_colors(monolingual_combined_df , multilingual_combined_df)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loss vs Sequence Length Reduction (Large Models)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example usage with the new parameter\n",
+    "file_paths = {\n",
+    "    \"ByT5\": 'eval_results/span_corruption/T5/byt5-large_span_corruption_seed18_en_only.csv',\n",
+    "    \"MrT5, 15%\": 'eval_results/span_corruption/MrT5/mrt5-large_span_corruption_pctrl15%_seed18_en_only.csv',\n",
+    "    \"MrT5, 30%\": 'eval_results/span_corruption/MrT5/mrt5-large_span_corruption_pctrl30%_seed18_en_only.csv',\n",
+    "    \"MrT5, 40%\": 'eval_results/span_corruption/MrT5/mrt5-large_span_corruption_pctrl40%_seed18_en_only.csv',\n",
+    "    \"MrT5, 50%\": 'eval_results/span_corruption/MrT5/mrt5-large_span_corruption_pctrl50%_seed18_en_only.csv',\n",
+    "    \"MrT5, 60%\": 'eval_results/span_corruption/MrT5/mrt5-large_span_corruption_pctrl60%_seed18_en_only.csv',\n",
+    "    \"MrT5, 70%\": 'eval_results/span_corruption/MrT5/mrt5-large_span_corruption_pctrl70%_seed18_en_only.csv',\n",
+    "    \"RandomT5, 15%\": 'eval_results/span_corruption/RandomT5/randomt5-large_span_corruption_15%_seed28_en_only.csv',\n",
+    "    \"RandomT5, 30%\": 'eval_results/span_corruption/RandomT5/randomt5-large_span_corruption_30%_seed28_en_only.csv',\n",
+    "    \"RandomT5, 40%\": 'eval_results/span_corruption/RandomT5/randomt5-large_span_corruption_40%_seed28_en_only.csv',\n",
+    "    \"RandomT5, 50%\": 'eval_results/span_corruption/RandomT5/randomt5-large_span_corruption_50%_seed28_en_only.csv',\n",
+    "    \"RandomT5, 60%\": 'eval_results/span_corruption/RandomT5/randomt5-large_span_corruption_60%_seed28_en_only.csv',\n",
+    "    \"RandomT5, 70%\": 'eval_results/span_corruption/RandomT5/randomt5-large_span_corruption_70%_seed28_en_only.csv',\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "losses_df = extract_data_from_files(file_paths, \"Eval Cross Entropy Loss\")\n",
+    "deleted_tokens_df = extract_data_from_files(file_paths, \"Eval Percent Deleted Tokens\")\n",
+    "runtimes_df = extract_data_from_files(file_paths, \"Eval Runtime\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Language</th>\n",
+       "      <th>ByT5</th>\n",
+       "      <th>MrT5, 15%</th>\n",
+       "      <th>MrT5, 30%</th>\n",
+       "      <th>MrT5, 40%</th>\n",
+       "      <th>MrT5, 50%</th>\n",
+       "      <th>MrT5, 60%</th>\n",
+       "      <th>MrT5, 70%</th>\n",
+       "      <th>RandomT5, 15%</th>\n",
+       "      <th>RandomT5, 30%</th>\n",
+       "      <th>RandomT5, 40%</th>\n",
+       "      <th>RandomT5, 50%</th>\n",
+       "      <th>RandomT5, 60%</th>\n",
+       "      <th>RandomT5, 70%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>English</td>\n",
+       "      <td>0.589564</td>\n",
+       "      <td>0.599229</td>\n",
+       "      <td>0.61019</td>\n",
+       "      <td>0.616187</td>\n",
+       "      <td>0.624954</td>\n",
+       "      <td>0.638307</td>\n",
+       "      <td>0.676086</td>\n",
+       "      <td>0.634093</td>\n",
+       "      <td>0.679418</td>\n",
+       "      <td>0.721832</td>\n",
+       "      <td>0.762843</td>\n",
+       "      <td>0.832783</td>\n",
+       "      <td>0.966301</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Language      ByT5  MrT5, 15%  MrT5, 30%  MrT5, 40%  MrT5, 50%  MrT5, 60%  \\\n",
+       "0  English  0.589564   0.599229    0.61019   0.616187   0.624954   0.638307   \n",
+       "\n",
+       "   MrT5, 70%  RandomT5, 15%  RandomT5, 30%  RandomT5, 40%  RandomT5, 50%  \\\n",
+       "0   0.676086       0.634093       0.679418       0.721832       0.762843   \n",
+       "\n",
+       "   RandomT5, 60%  RandomT5, 70%  \n",
+       "0       0.832783       0.966301  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "losses_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Language</th>\n",
+       "      <th>ByT5</th>\n",
+       "      <th>MrT5, 15%</th>\n",
+       "      <th>MrT5, 30%</th>\n",
+       "      <th>MrT5, 40%</th>\n",
+       "      <th>MrT5, 50%</th>\n",
+       "      <th>MrT5, 60%</th>\n",
+       "      <th>MrT5, 70%</th>\n",
+       "      <th>RandomT5, 15%</th>\n",
+       "      <th>RandomT5, 30%</th>\n",
+       "      <th>RandomT5, 40%</th>\n",
+       "      <th>RandomT5, 50%</th>\n",
+       "      <th>RandomT5, 60%</th>\n",
+       "      <th>RandomT5, 70%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>English</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20.775225</td>\n",
+       "      <td>33.348379</td>\n",
+       "      <td>42.308096</td>\n",
+       "      <td>51.131494</td>\n",
+       "      <td>59.732031</td>\n",
+       "      <td>68.040332</td>\n",
+       "      <td>15.163818</td>\n",
+       "      <td>30.255029</td>\n",
+       "      <td>40.031602</td>\n",
+       "      <td>50.06501</td>\n",
+       "      <td>59.825068</td>\n",
+       "      <td>69.986445</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Language  ByT5  MrT5, 15%  MrT5, 30%  MrT5, 40%  MrT5, 50%  MrT5, 60%  \\\n",
+       "0  English   0.0  20.775225  33.348379  42.308096  51.131494  59.732031   \n",
+       "\n",
+       "   MrT5, 70%  RandomT5, 15%  RandomT5, 30%  RandomT5, 40%  RandomT5, 50%  \\\n",
+       "0  68.040332      15.163818      30.255029      40.031602       50.06501   \n",
+       "\n",
+       "   RandomT5, 60%  RandomT5, 70%  \n",
+       "0      59.825068      69.986445  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deleted_tokens_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Language</th>\n",
+       "      <th>ByT5</th>\n",
+       "      <th>MrT5, 15%</th>\n",
+       "      <th>MrT5, 30%</th>\n",
+       "      <th>MrT5, 40%</th>\n",
+       "      <th>MrT5, 50%</th>\n",
+       "      <th>MrT5, 60%</th>\n",
+       "      <th>MrT5, 70%</th>\n",
+       "      <th>RandomT5, 15%</th>\n",
+       "      <th>RandomT5, 30%</th>\n",
+       "      <th>RandomT5, 40%</th>\n",
+       "      <th>RandomT5, 50%</th>\n",
+       "      <th>RandomT5, 60%</th>\n",
+       "      <th>RandomT5, 70%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>English</td>\n",
+       "      <td>1890.146674</td>\n",
+       "      <td>1650.607278</td>\n",
+       "      <td>1388.886447</td>\n",
+       "      <td>1187.093007</td>\n",
+       "      <td>1058.604594</td>\n",
+       "      <td>968.625386</td>\n",
+       "      <td>817.660437</td>\n",
+       "      <td>1757.462071</td>\n",
+       "      <td>1443.375139</td>\n",
+       "      <td>1219.982876</td>\n",
+       "      <td>1034.369951</td>\n",
+       "      <td>884.310071</td>\n",
+       "      <td>743.755242</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Language         ByT5    MrT5, 15%    MrT5, 30%    MrT5, 40%    MrT5, 50%  \\\n",
+       "0  English  1890.146674  1650.607278  1388.886447  1187.093007  1058.604594   \n",
+       "\n",
+       "    MrT5, 60%   MrT5, 70%  RandomT5, 15%  RandomT5, 30%  RandomT5, 40%  \\\n",
+       "0  968.625386  817.660437    1757.462071    1443.375139    1219.982876   \n",
+       "\n",
+       "   RandomT5, 50%  RandomT5, 60%  RandomT5, 70%  \n",
+       "0    1034.369951     884.310071     743.755242  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "runtimes_df"
    ]
   }
  ],
