New results and deletion patterns for diagnostic task models

--- a/eval/diagnostic_task_eval.ipynb
+++ b/eval/diagnostic_task_eval.ipynb
@@ -11,18 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import subprocess\n",
     "\n",
-    "def run_model_evals(tasks_and_models, model_class, random_seed=59):\n",
+    "def run_model_evals(tasks_and_models, model_class):\n",
     "    # Loop through the list and run the eval script with each parameter\n",
     "    for task in tasks_and_models.keys():\n",
     "        models = tasks_and_models[task]\n",
-    "        for model in models:\n",
-    "            command = f\"python diagnostic_task_eval.py {task} {model} {model_class} --random_seed {random_seed}\"\n",
+    "        for model, seed in models:\n",
+    "            command = f\"python diagnostic_task_eval.py {task} {model} {model_class} --random_seed {seed} --hard_delete\"\n",
     "            # Execute the command using subprocess.run\n",
     "            subprocess.run(command, shell=True)"
    ]
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
      "text": [
       "Loading model...\n",
       "vowel_removal\n",
-      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/vowel_removal/T5/t5_simple_vowel_removal_seed59/checkpoints/checkpoint-20000\n",
+      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/vowel_removal/T5/t5_simple_vowel_removal_seed121/checkpoints/checkpoint-30000\n",
       "\n",
       "Loading vowel_removal test dataset...\n"
      ]
@@ -54,23 +54,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 249/250 [01:28<00:00,  2.81it/s]\n"
+      "100%|█████████▉| 249/250 [00:41<00:00,  5.93it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eval cross entropy loss: 0.0005509855701238849\n",
+      "Eval cross entropy loss: 5.142786203714422e-05\n",
       "Eval percent deleted tokens: 0.0\n",
-      "Eval new sequence length: 128.0\n",
-      "Eval token accuracy: 0.99972265625\n",
-      "Eval sequence accuracy: 0.96534375\n",
+      "Eval new sequence length: 64.0\n",
+      "Eval token accuracy: 0.999987410263958\n",
+      "Eval sequence accuracy: 0.99934375\n",
       "Examples evaluated: 32000\n",
       "\n",
       "Loading model...\n",
       "contextual_vowel_removal\n",
-      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/contextual_vowel_removal/T5/t5_contextual_vowel_removal_seed59/checkpoints/checkpoint-20000\n",
+      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/contextual_vowel_removal/T5/t5_contextual_vowel_removal_seed11/checkpoints/checkpoint-30000\n",
       "\n",
       "Loading contextual_vowel_removal test dataset...\n"
      ]
@@ -79,23 +79,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 249/250 [01:30<00:00,  2.76it/s]\n"
+      "100%|█████████▉| 249/250 [00:43<00:00,  5.77it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eval cross entropy loss: 0.00017452824787233113\n",
+      "Eval cross entropy loss: 5.095320295799866e-05\n",
       "Eval percent deleted tokens: 0.0\n",
-      "Eval new sequence length: 128.0\n",
-      "Eval token accuracy: 0.999933349609375\n",
-      "Eval sequence accuracy: 0.99153125\n",
+      "Eval new sequence length: 64.0\n",
+      "Eval token accuracy: 0.999982861869418\n",
+      "Eval sequence accuracy: 0.99909375\n",
       "Examples evaluated: 32000\n",
       "\n",
       "Loading model...\n",
       "merge_ABC\n",
-      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/merge_ABC/T5/t5_merge_ABC_seed59/checkpoints/checkpoint-20000\n",
+      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/merge_ABC/T5/t5_merge_ABC_seed241/checkpoints/checkpoint-30000\n",
       "\n",
       "Loading merge_ABC test dataset...\n"
      ]
@@ -104,18 +104,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 249/250 [01:29<00:00,  2.79it/s]\n"
+      "100%|█████████▉| 249/250 [00:42<00:00,  5.91it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eval cross entropy loss: 0.00026714385767627393\n",
+      "Eval cross entropy loss: 7.225487371078999e-05\n",
       "Eval percent deleted tokens: 0.0\n",
-      "Eval new sequence length: 128.0\n",
-      "Eval token accuracy: 0.99987744140625\n",
-      "Eval sequence accuracy: 0.9844375\n",
+      "Eval new sequence length: 64.0\n",
+      "Eval token accuracy: 0.9999715122233978\n",
+      "Eval sequence accuracy: 0.9984375\n",
       "Examples evaluated: 32000\n",
       "\n"
      ]
@@ -124,12 +124,12 @@
    "source": [
     "# List of parameters you want to loop through\n",
     "tasks_and_models = {\n",
-    "    \"vowel_removal\": [\"t5_simple_vowel_removal\"],\n",
-    "    \"contextual_vowel_removal\": [\"t5_contextual_vowel_removal\"],\n",
-    "    \"merge_ABC\": [\"t5_merge_ABC\"],\n",
+    "    \"vowel_removal\": [(\"t5_simple_vowel_removal\", 121)],\n",
+    "    \"contextual_vowel_removal\": [(\"t5_contextual_vowel_removal\", 11)],\n",
+    "    \"merge_ABC\": [(\"t5_merge_ABC\", 241)],\n",
     "}\n",
     "\n",
-    "run_model_evals(tasks_and_models, \"T5\", random_seed=59)"
+    "run_model_evals(tasks_and_models, \"T5\")"
    ]
   },
   {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
      "text": [
       "Loading model...\n",
       "vowel_removal\n",
-      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/vowel_removal/MrT5/mrt5_simple_vowel_removal_0.0_seed59/checkpoints/checkpoint-20000\n",
+      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/vowel_removal/MrT5/mrt5_simple_vowel_removal_1e-4_seed429/checkpoints/checkpoint-30000\n",
       "\n",
       "Loading vowel_removal test dataset...\n"
      ]
@@ -159,23 +159,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 249/250 [01:28<00:00,  2.81it/s]\n"
+      "100%|█████████▉| 249/250 [00:42<00:00,  5.85it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eval cross entropy loss: 9.813663885506685e-05\n",
-      "Eval percent deleted tokens: 18.9471435546875\n",
-      "Eval new sequence length: 114.564\n",
-      "Eval token accuracy: 0.999973388671875\n",
-      "Eval sequence accuracy: 0.9966875\n",
+      "Eval cross entropy loss: 4.533697633360134e-05\n",
+      "Eval percent deleted tokens: 18.58466796875\n",
+      "Eval new sequence length: 59.46\n",
+      "Eval token accuracy: 0.9999850047236116\n",
+      "Eval sequence accuracy: 0.99921875\n",
       "Examples evaluated: 32000\n",
       "\n",
       "Loading model...\n",
       "vowel_removal\n",
-      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/vowel_removal/MrT5/mrt5_simple_vowel_removal_0.0001_seed59/checkpoints/checkpoint-20000\n",
+      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/vowel_removal/MrT5/mrt5_simple_vowel_removal_1e-3_seed93/checkpoints/checkpoint-30000\n",
       "\n",
       "Loading vowel_removal test dataset...\n"
      ]
@@ -184,23 +184,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 249/250 [01:24<00:00,  2.94it/s]\n"
+      "100%|█████████▉| 249/250 [00:42<00:00,  5.84it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eval cross entropy loss: 0.008236341631039977\n",
-      "Eval percent deleted tokens: 51.1510986328125\n",
-      "Eval new sequence length: 76.956\n",
-      "Eval token accuracy: 0.997520263671875\n",
-      "Eval sequence accuracy: 0.781625\n",
+      "Eval cross entropy loss: 5.423742860853053e-05\n",
+      "Eval percent deleted tokens: 20.14716796875\n",
+      "Eval new sequence length: 58.46\n",
+      "Eval token accuracy: 0.9999838014902892\n",
+      "Eval sequence accuracy: 0.9991875\n",
       "Examples evaluated: 32000\n",
       "\n",
       "Loading model...\n",
       "contextual_vowel_removal\n",
-      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/contextual_vowel_removal/MrT5/mrt5_contextual_vowel_removal_0.001_seed59/checkpoints/checkpoint-20000\n",
+      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/contextual_vowel_removal/MrT5/mrt5_contextual_vowel_removal_1e-2_seed934/checkpoints/checkpoint-30000\n",
       "\n",
       "Loading contextual_vowel_removal test dataset...\n"
      ]
@@ -209,73 +209,48 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 249/250 [01:31<00:00,  2.73it/s]\n"
+      "100%|█████████▉| 249/250 [00:43<00:00,  5.78it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eval cross entropy loss: 0.0003811254109177753\n",
+      "Eval cross entropy loss: 0.00013472470228134624\n",
+      "Eval percent deleted tokens: 18.96748046875\n",
+      "Eval new sequence length: 60.56\n",
+      "Eval token accuracy: 0.99994624392371\n",
+      "Eval sequence accuracy: 0.99715625\n",
+      "Examples evaluated: 32000\n",
+      "\n",
+      "Loading model...\n",
+      "contextual_vowel_removal\n",
+      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/contextual_vowel_removal/MrT5/mrt5_contextual_vowel_removal_1e-3_seed510/checkpoints/checkpoint-30000\n",
+      "\n",
+      "Loading contextual_vowel_removal test dataset...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████▉| 249/250 [00:42<00:00,  5.82it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eval cross entropy loss: 0.00010874113667932761\n",
       "Eval percent deleted tokens: 1.5625\n",
-      "Eval new sequence length: 126.0\n",
-      "Eval token accuracy: 0.999878173828125\n",
-      "Eval sequence accuracy: 0.9844375\n",
-      "Examples evaluated: 32000\n",
-      "\n",
-      "Loading model...\n",
-      "contextual_vowel_removal\n",
-      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/contextual_vowel_removal/MrT5/mrt5_contextual_vowel_removal_0.001_L7_seed59/checkpoints/checkpoint-20000\n",
-      "\n",
-      "Loading contextual_vowel_removal test dataset...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████▉| 249/250 [01:30<00:00,  2.76it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Eval cross entropy loss: 0.0010879925589688355\n",
-      "Eval percent deleted tokens: 18.51201171875\n",
-      "Eval new sequence length: 120.16\n",
-      "Eval token accuracy: 0.999718994140625\n",
-      "Eval sequence accuracy: 0.964875\n",
-      "Examples evaluated: 32000\n",
-      "\n",
-      "Loading model...\n",
-      "contextual_vowel_removal\n",
-      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/contextual_vowel_removal/MrT5/mrt5_contextual_vowel_removal_0.001_L8_seed59/checkpoints/checkpoint-20000\n",
-      "\n",
-      "Loading contextual_vowel_removal test dataset...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████▉| 249/250 [01:31<00:00,  2.71it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Eval cross entropy loss: 0.0015164393637678586\n",
-      "Eval percent deleted tokens: 18.51201171875\n",
-      "Eval new sequence length: 120.152\n",
-      "Eval token accuracy: 0.99959228515625\n",
-      "Eval sequence accuracy: 0.9491875\n",
+      "Eval new sequence length: 63.0\n",
+      "Eval token accuracy: 0.9999592178636283\n",
+      "Eval sequence accuracy: 0.99784375\n",
       "Examples evaluated: 32000\n",
       "\n",
       "Loading model...\n",
       "merge_ABC\n",
-      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/merge_ABC/MrT5/mrt5_merge_ABC_0.001_seed59/checkpoints/checkpoint-20000\n",
+      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/merge_ABC/MrT5/mrt5_merge_ABC_1e-2_seed14/checkpoints/checkpoint-30000\n",
       "\n",
       "Loading merge_ABC test dataset...\n"
      ]
@@ -284,23 +259,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 249/250 [01:31<00:00,  2.73it/s]\n"
+      "100%|█████████▉| 249/250 [00:42<00:00,  5.82it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eval cross entropy loss: 0.00024240130726866483\n",
-      "Eval percent deleted tokens: 1.5625\n",
-      "Eval new sequence length: 126.0\n",
-      "Eval token accuracy: 0.99991259765625\n",
-      "Eval sequence accuracy: 0.988875\n",
+      "Eval cross entropy loss: 0.00025213346126292893\n",
+      "Eval percent deleted tokens: 10.146875\n",
+      "Eval new sequence length: 61.996\n",
+      "Eval token accuracy: 0.9998968378415278\n",
+      "Eval sequence accuracy: 0.994375\n",
       "Examples evaluated: 32000\n",
       "\n",
       "Loading model...\n",
       "merge_ABC\n",
-      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/merge_ABC/MrT5/mrt5_merge_ABC_0.001_L6_seed59/checkpoints/checkpoint-20000\n",
+      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/merge_ABC/MrT5/mrt5_merge_ABC_1.5e-2_seed123/checkpoints/checkpoint-30000\n",
       "\n",
       "Loading merge_ABC test dataset...\n"
      ]
@@ -309,43 +284,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 249/250 [01:30<00:00,  2.75it/s]\n"
+      "100%|█████████▉| 249/250 [00:42<00:00,  5.91it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eval cross entropy loss: 0.0004778707785771985\n",
-      "Eval percent deleted tokens: 8.305029296875\n",
-      "Eval new sequence length: 126.0\n",
-      "Eval token accuracy: 0.9998212890625\n",
-      "Eval sequence accuracy: 0.97740625\n",
-      "Examples evaluated: 32000\n",
-      "\n",
-      "Loading model...\n",
-      "merge_ABC\n",
-      "Path: /nlp/scr3/nlp/llms-in-llms/mrt5/models/merge_ABC/MrT5/mrt5_merge_ABC_0.001_L7_seed59/checkpoints/checkpoint-20000\n",
-      "\n",
-      "Loading merge_ABC test dataset...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████▉| 249/250 [01:30<00:00,  2.75it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Eval cross entropy loss: 0.004423437299672514\n",
-      "Eval percent deleted tokens: 16.936083984375\n",
-      "Eval new sequence length: 124.452\n",
-      "Eval token accuracy: 0.998436767578125\n",
-      "Eval sequence accuracy: 0.85221875\n",
+      "Eval cross entropy loss: 0.0004563363664965436\n",
+      "Eval percent deleted tokens: 17.371142578125\n",
+      "Eval new sequence length: 60.996\n",
+      "Eval token accuracy: 0.9998471618873562\n",
+      "Eval sequence accuracy: 0.991875\n",
       "Examples evaluated: 32000\n",
       "\n"
      ]
@@ -356,24 +306,22 @@
     "tasks_and_models = {\n",
     "    \"vowel_removal\":\n",
     "      [\n",
-    "        \"mrt5_simple_vowel_removal_0.0\",\n",
-    "        \"mrt5_simple_vowel_removal_0.0001\",\n",
+    "       (\"mrt5_simple_vowel_removal_1e-4\", 429),\n",
+    "       (\"mrt5_simple_vowel_removal_1e-3\", 93),\n",
     "      ],\n",
     "    \"contextual_vowel_removal\":\n",
     "      [\n",
-    "        \"mrt5_contextual_vowel_removal_0.001\",\n",
-    "        \"mrt5_contextual_vowel_removal_0.001_L7\",\n",
-    "        \"mrt5_contextual_vowel_removal_0.001_L8\",\n",
+    "        (\"mrt5_contextual_vowel_removal_1e-2\", 934),\n",
+    "        (\"mrt5_contextual_vowel_removal_1e-3\", 510),\n",
     "      ],\n",
     "    \"merge_ABC\":\n",
     "      [\n",
-    "        \"mrt5_merge_ABC_0.001\",\n",
-    "        \"mrt5_merge_ABC_0.001_L6\",\n",
-    "        \"mrt5_merge_ABC_0.001_L7\",\n",
+    "        (\"mrt5_merge_ABC_1e-2\", 14),\n",
+    "        (\"mrt5_merge_ABC_1.5e-2\", 123)\n",
     "      ],\n",
     "}\n",
     "\n",
-    "run_model_evals(tasks_and_models, \"MrT5\", random_seed=59)"
+    "run_model_evals(tasks_and_models, \"MrT5\")"
    ]
   }
  ],
