Change default layer in train.py

--- a/eval/finetune_task_eval.ipynb
+++ b/eval/finetune_task_eval.ipynb
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "path = 'eval_results/character_tasks/spelling_correction_contextual/{}/{}.csv'\n",
     "\n",
     "# ByT5 DF\n",
-    "byt5 = pd.read_csv(path.format('T5', 't5_spelling_correction_contextual_v5_seed45'))\n",
+    "byt5 = pd.read_csv(path.format('T5', 't5_spelling_correction_contextual_seed45'))\n",
     "byt5 = compute_weighted_averages(byt5)\n",
     "\n",
     "# MrT5 DF\n",
@@ -478,26 +478,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "path = 'eval_results/character_tasks/word_search/{}/{}.csv'\n",
     "\n",
     "# ByT5 DF\n",
-    "byt5 = pd.read_csv(path.format('T5', 't5_word_search_f_seed462'))\n",
+    "byt5 = pd.read_csv(path.format('T5', 't5_word_search_seed462'))\n",
     "byt5 = compute_weighted_averages(byt5, split_col='Split')\n",
     "\n",
     "# MrT5 DF\n",
-    "mrt5 = pd.read_csv(path.format('MrT5', 'mrt5_word_search_70%_f_seed54'))\n",
+    "mrt5 = pd.read_csv(path.format('MrT5', 'mrt5_word_search_70%_seed54'))\n",
     "mrt5 = compute_weighted_averages(mrt5, split_col='Split')\n",
     "\n",
     "# BPT5\n",
-    "bpt5 = pd.read_csv(path.format('BPT5', 'bpt5_word_search_70%_f_seed13'))\n",
+    "bpt5 = pd.read_csv(path.format('BPT5', 'bpt5_word_search_70%_seed13'))\n",
     "bpt5 = compute_weighted_averages(bpt5, split_col='Split')\n",
     "\n",
     "# CanineT5\n",
-    "caninet5 = pd.read_csv(path.format('CanineT5', 'caninet5_word_search_75%_f_seed857'))\n",
+    "caninet5 = pd.read_csv(path.format('CanineT5', 'caninet5_word_search_75%_seed857'))\n",
     "caninet5 = compute_weighted_averages(caninet5, split_col='Split')"
    ]
   },
